base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: scheduler
  name: scheduler
