base/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: scheduler-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 1M
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - scheduler.mbegley.net
      secretName: scheduler-mbegley-net-tls
  rules:
    - host: scheduler.mbegley.net
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: scheduler-ui
                port:
                  number: 80
          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: scheduler-api
                port:
                  number: 8080
          - path: /ng/?(.*)
            pathType: Prefix
            backend:
              service:
                name: noticegen
                port:
                  number: 8080

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: scheduler-staging
#   namespace: scheduler-staging
#   annotations:
#     certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#     ingress.kubernetes.io/service-upstream: "true"
#     kubernetes.io/ingress.class: "nginx"
#     kubernetes.io/tls-acme: "true"
#     kubernetes.io/ingress.allow-http: "false"
#     nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
#     nginx.ingress.kubernetes.io/proxy-body-size: "1M"
# spec:
#   tls:
#   - hosts:
#       - scheduler-dev.michaelbegley.com
#     secretName: scheduler-dev-michaelbegley-com-tls
#   rules:
#   - host: scheduler-dev.michaelbegley.com
#     http:
#       paths:
#       - path: /?(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: scheduler-ui
#             port:
#               number: 80
#       - path: /api/?(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: scheduler-api
#             port:
#               number: 8080
#       - path: /ng/?(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: noticegen
#             port:
#               number: 8080

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#  name: scheduler-ingress
#  annotations:
#    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#    kubernetes.io/ingress.allow-http: 'false'
#    kubernetes.io/ingress.class: nginx
#    kubernetes.io/tls-acme: 'true'
#    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
#    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
#    nginx.ingress.kubernetes.io/proxy-body-size: 1M
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
#    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
#spec:
#  tls:
#  - hosts:
#    - scheduler-dev.michaelbegley.com
#    secretName: scheduler-dev-michaelbegley-com-tls
#  rules:
#  - host: scheduler-dev.michaelbegley.com
#    http:
#      paths:
#      - path: /?(.*)
#        backend:
#          serviceName: scheduler-ui
#          servicePort: 80
#      - path: /api?(.*)
#        backend:
#          serviceName: scheduler-api
#          servicePort: 8080
#      - path: /ng?(.*)
#        backend:
#          serviceName: noticegen
#          servicePort: 8080
